// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductTitle debe de mostrar el componente con el nombre del producto 1`] = `
<div
  className="productCard undefined"
>
  <img
    alt="Product image"
    className="productImg undefined"
    src="./coffee-mug.png"
  />
</div>
`;

exports[`ProductTitle debe de mostrar el componente correctamente con el titulo personalizado 1`] = `
<img
  alt="Product image"
  className="productImg undefined"
  src="./coffee-mug.png"
/>
`;

exports[`ProductTitle debe de mostrar el componente correctamente con la imagen 1`] = `
<img
  alt="Product image"
  className="productImg undefined"
  src="./coffee-mug.png"
/>
`;

exports[`ProductTitle debe de mostrar el product card con la imagen 1`] = `
<div
  className="productCard undefined"
>
  <img
    alt="Product image"
    className="productImg undefined"
    src="./coffee-mug.png"
  />
</div>
`;
